# gl_vk_meshlet_cadscene

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  blade_meshlet.cfg  blade_meshlet_viewpoints.txt  cadscene.cpp  cadscene.hpp  cadscene_gl.cpp  cadscene_gl.hpp  cadscene_vk.cpp  cadscene_vk.hpp  cadscenefile.cpp  cadscenefile.h  common.h  config.h  csf.cpp  draw.frag.glsl  draw.vert.glsl  draw_shading.glsl  drawmeshlet.frag.glsl  drawmeshlet.mesh.glsl  drawmeshlet.task.glsl  drawmeshlet_basic.mesh.glsl  drawmeshlet_cull.mesh.glsl  drawmeshlet_ext.frag.glsl  drawmeshlet_ext.task.glsl  drawmeshlet_ext_basic.mesh.glsl  drawmeshlet_ext_cull.mesh.glsl  drawmeshlet_ext_scull.mesh.glsl  drawmeshlet_nv.frag.glsl  drawmeshlet_nv.task.glsl  drawmeshlet_nv_basic.mesh.glsl  drawmeshlet_nv_cull.mesh.glsl  meshletbbox.frag.glsl  meshletbbox.geo.glsl  meshletbbox.vert.glsl  meshlettest.cpp  nvmeshlet_array.hpp  nvmeshlet_builder.hpp  (+18 more)
